--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <main class="menu__main">
             <section class="menu__coffee">
                 <h2 class="menu__title">Coffee</h2>
+                <img class="icon" src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="Coffee cup icon">
                 <article class="item">
                     <p class="drink">Coffee</p><p class="price">55</p>
                 </article>
@@ -30,6 +31,7 @@
             </section>
             <section class="menu__desserts">
                 <h2 class="menu__title">Desserts</h2>
+                <img class="icon" src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon"/>
                 <article class="item">
                     <article class="item">
                         <p class="dessert">Cake</p><p class="price">60</p>
