Changes the tag name and adds style

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <head class="menu__header">
+        <header class="menu__header">
             <h1 class="cafe__title">Best coffee cafe</h1>
-        </head>
+        </header>
+        <hr>
         <main class="menu__main">
             <section class="menu__coffee">
                 <h2 class="menu__title">Coffee</h2>
@@ -50,6 +51,7 @@
                     </article>
                 </article>
             </section>
+            <hr>
         </main>
     </div>
 </body>
