--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             </section>
             <hr>
         </main>
+        <footer class="footer">
+            <p class="footer__link">
+                <a href="https://www.freecodecamp.org" target="_blank" class="footer-link">Visit our website</a>
+            </p>
+            <address>123 Free Code Camp Drive</address>
+        </footer>
     </div>
 </body>
 </html>
